@@ -10,7 +10,7 @@ HTMLDOC</a></h1>
 <p>This chapter describes the steps needed to install the
 members version of HTMLDOC on your system. If you are installing
 HTMLDOC from source code, please see <a
-href='#COMPILING'>Appendix D, Compiling HTMLDOC from
+href='#COMPILE'>Appendix D, Compiling HTMLDOC from
 Source</a>.</p>
 
 <h2>Requirements</h2>
