@@ -146,6 +146,9 @@
 	<li>Character entities were not decoded/encoded inside
 	HTML comments.</li>
 
+	<li>The current heading was not always correctly
+	substituted when used in the page header or footer.</li>
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.23</H2>
